<resources>
    <string name="app_name">Advance Timer</string>
    <string name="create_notification_text">Press button to create notification.</string>
    <string name="make_notification">Make Notification</string>
    <string name="local_service_started">12333</string>

    <string name="add_AlarmTimer">Add a new alarm or timer</string>
    <string name="new_alarmtimer">Create a new timer.</string>
    <string name="edit_alarmtimer">Edit an alarm or timer.</string>
    <string name="save_button">SAVE</string>
    <string name="edit_button">EDIT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_alarm_test">AlarmActivityTest</string>
    <string name="default_hms">00</string>

    <string name="hour_hint">HOUR</string>
    <string name="minute_hint">MINUTE</string>
    <string name="second_hint">SECOND</string>
    <string name="alarmtimer_title_hint">Timer Title</string>
    <string name="dismiss_timer_title">Timer Title</string>

    <string name="hourHint">Hours</string>
    <string name="minuteHint">Minutes</string>
    <string name="secondHint">Seconds</string>

    <string name="timerTitleDetail">Title: %1$s</string>
    <string name="parentTimerTitleDetail">Parent timer: %1$s</string>

    <string name="parent_alarmtimer_title">Title: %s</string>
    <string name="parent_alarmtimer_type">Type: %s</string>

</resources>
