<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newTimerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarmtimernew.AlarmTimerNewFragment">

    <TextView
        android:id="@+id/add_alarmtimer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/new_alarmtimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/timerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/alarmtimer_title_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_alarmtimer_text" />


    <RadioGroup
        android:id="@+id/timerTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerTitle">

        <RadioButton
            android:id="@+id/oneOffRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="One-Off Timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerTypeRadioGroup" />

        <RadioButton
            android:id="@+id/repeatingRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeating Timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oneOffRadioButton" />

    </RadioGroup>

    <include
        android:id="@+id/oneOffTimerNumber"
        layout="@layout/time_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerTypeRadioGroup" />

    <Button
        android:id="@+id/add_alarmtimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneOffTimerNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>